--- a/index.html
+++ b/index.html
@@ -657,26 +657,26 @@ zespołów muzycznych.</p>
 					</div>
 				</div>
 			</div>					
-			
+			<!-- End row -->
 			<div class="row">
 				<div class="col-md-4 col-sm-4 padding-right">
 					<!-- top lawyer img -->
 					<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
-						<img  class="img-responsive" src="img/kuba.jpg" alt="">
+						<img  class="img-responsive" src="img/anita.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-md-8 col-sm-8">
 					<!-- top lawyer description -->
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
-							<h4>Jakub Pels</h4>
-							<h5>Specjalista RODO, BHP</h5>
-							<p>Moje życie zawodowe jest od dłuższego czasu związane z BHP. Jestem specjalistą w tej dziedzinie i ramach założonej w 2013 roku działalności, przeprowadzam szkolenia w dużych i mniejszych firmach, zarówno dla pracowników jak i pracodawców. W dzisiejszych czasach niezwykle istotne jest dbanie o dane osobowe, które są dużą wartością dla każdego człowieka, dlatego postanowiłem rozwinąć się także w tym kierunku. W czerwcu 2018 roku, ukończyłem kurs organizowany przez BDO Academy i zostałem certyfikowanym inspektorem ochrony danych osobowych, w kontekście zmian w prawie, które zaszły w tymże roku i związane są z ustawą RODO. Znam się na zasadach przetwarzania danych osobowych, na polityce bezpieczeństwa informacji czy na analizie zagrożeń i ryzyka związanych z wymianą danych. W 2018 zostałem specjalistą od RODO w Biurze Rachunkowym Ekspert.</p>
+							<h4>Anita Cisło</h4>
+							<h5>Księgowa</h5>
+							<p>Z rachunkowością i podatkami jestem związana od czasów ukończenia na Politechnice Rzeszowskiej kierunku Finanse i Rachunkowość. Jako pasjonatka tej dziedziny wiedzy poszłam o krok dalej i podjęłam też studia ekonomiczne w Wyższej Szkole Informatyki i Zarządzania. Ponieważ cenię przede wszystkim rozwiązania sprawdzone w praktyce, już od pierwszego roku studiów pracowałam w biurze rachunkowym Biegłego Rewidenta. Systematycznie i konsekwentnie zdobywam też certyfikację w Stowarzyszeniu Księgowych w Polsce, z którym to jestem związana od samego początku mojej drogi zawodowej. Dzięki statusowi Członka SKwP mam zapewniony dostęp do wszelkich nowinek ze świata finansów i aktualnych rozwiązań prawnych, które na bieżąco wykorzystuję w codziennej pracy. W Biurze Rachunkowym Ekspert pracuję na stanowisku samodzielnej księgowej, co oznacza, że zajmuję się kompleksowym rozliczaniem i obsługą podatkowo-rachunkową podmiotów gospodarczych. To duża odpowiedzialność, ale jestem osobą, która konsekwentnie dąży do poszerzania swoich horyzontów i… lubię wyzwania.</p>
 							<img class="coffie" src="img/coffie.png" alt="">							
 							<div class="lawyer-social-media">
-							<a href="mailto:biuro@br-ekspert.com">
+							<a href="mailto:anita.cislo@br-ekspert.com">
 								<i class="fa fa-paper-plane-o"></i>
-								jakub@br-ekspert.com	<br>							
+								anita.cislo@br-ekspert.com	<br>							
 							<!-- top lawyer social media link  -->
 							<a href="tel:48178589045">
 										<i class="pe-7s-call"></i>
@@ -688,6 +688,39 @@ zespołów muzycznych.</p>
 					</div>
 				</div>
 			</div>
+			<!-- End row -->
+			<div class="row">
+				<div class="col-md-4 col-sm-4 padding-right">
+					<!-- top lawyer img -->
+					<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
+						<img  class="img-responsive" src="img/kaska.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-md-8 col-sm-8">
+					<!-- top lawyer description -->
+					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
+						<div class="rex-team-text">
+							<h4>Katarzyna Śliwińska</h4>
+							<h5>Księgowa</h5>
+							<p>Moja zawodowa droga związana z zarządzaniem i ekonomią rozpoczęła się na Politechnice Krakowskiej – to tam ukończyłam Transport, zdobywając rzetelną wiedzę m.in. z zakresu organizacji procesów transportowych i zarządzania nimi. Po studiach przez ponad rok pracowałam w dużej firmie spedycyjnej, gdzie miałam kontakt z wieloma przedsiębiorstwami transportowymi, dzięki czemu poznałam zagadnienia związane z prowadzeniem działalności gospodarczej w tym sektorze. To doświadczenie, połączone ze zdobytą wcześniej wiedzą, bardzo ułatwia mi dziś zrozumienie problemów, z którymi zmagają się nasi klienci. Na co dzień przykładam dużą wagę do szczegółów i staram się wnikliwie analizować każdy problem, aby jak najszybciej rozwiać wątpliwości naszych klientów. Podobnie jak moja ulubiona pisarka Agata Christie, uważam, że do osiągnięcia zamierzonego celu niezbędne są porządek i metoda – jest to też podstawa rzetelnej księgowości. Cieszę się, że jestem częścią zespołu firmy Ekspert, ponieważ łączy nas właśnie styl pracy oparty  na zaangażowaniu i sumienności w realizacji zadań.</p>
+							<img class="coffie" src="img/coffie.png" alt="">							
+							<div class="lawyer-social-media">
+							<a href="mailto:katarzyna.sliwinska@br-ekspert.com">
+								<i class="fa fa-paper-plane-o"></i>
+								katarzyna.sliwinska@br-ekspert.com	<br>							
+							<!-- top lawyer social media link  -->
+							<a href="tel:48178589045">
+										<i class="pe-7s-call"></i>
+										(+48) 17-858-90-45
+									</a>
+								<!--<img src="img/sign2.png" alt="">-->							
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- End row -->
+			
 			<!-- End row -->
 			
 			<!-- start row -->
