usuniecie banerow comarch - nie dzialaja

--- a/index.html
+++ b/index.html
@@ -1310,8 +1310,8 @@ zespołów muzycznych.</p>
 								<a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
 
 							</div> -->
-							<a href="http://www.iksiegowosc24.pl/img/baneryComarch/biuroPolecane/250x100.png" alt="Biuro polecane przez iKsiegowosc24" width="250" height="100" /></a><BR /><a href="http://www.iksiegowosc24.pl/biura-rachunkowe/podkarpackie/lubaczow/ekspert-sp-z-o-o" target="_blank" title="Biuro polecane przez iKsiegowosc24"><img src="http://www.iksiegowosc24.pl/img/baneryComarch/biuroPolecane/250x100.png" alt="Biuro polecane przez iKsiegowosc24" width="250" height="100" /></a>
-									<a href="http://www.ibard24.pl/" target="_blank" title="Gwarancja bezpieczeństwa danych z iBard24"><img src="http://www.iksiegowosc24.pl/img/baneryComarch/ibard/250x100.png" alt="Gwarancja bezpieczeństwa danych z iBard24" width="250" height="100" /></a>
+							<!--<a href="https://www.iksiegowosc24.pl/" target="_blank" title="Biuro polecane przez iKsiegowosc24"><img src="https://www.iksiegowosc24.pl/img/baneryComarch/biuroPolecane/150x50.png" alt="Biuro polecane przez iKsiegowosc24" width="150" height="50" /></a>
+									<a href="https://www.ibard.com/" target="_blank" title="Gwarancja bezpieczeństwa danych z Comarch IBARD Backup"><img src="https://www.iksiegowosc24.pl/img/baneryComarch/ibard/150x50.png" alt="Gwarancja bezpieczeństwa danych z Comarch IBARD Backup" width="150" height="50" /></a> -->
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-6 col-sm-6">
