--- a/index.html
+++ b/index.html
@@ -743,7 +743,38 @@ Dlatego, by zapewnić kompleksową obsługę firm transportowych, oferujemy szer
 					</div>
 				</div>
 			</div>	
+			
 			<!-- End row -->
+			<div class="row">
+				<div class="col-md-4 col-sm-4 padding-right">
+					<!-- top lawyer img -->
+					<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
+						<img  class="img-responsive" src="img/angelika.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-md-8 col-sm-8">
+					<!-- top lawyer description -->
+					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
+						<div class="rex-team-text">
+							<h4>Angelika Abramczyk</h4>
+							<h5>Księgowa, ODDZIAŁ RZESZÓW</h5>
+							<p>Z rachunkowością związana jestem od szkoły średniej- kiedy wybór padł na Technikum Ekonomiczne. Następnie, znając już podstawy tej wymagającej dokładności,  skrupulatności i terminowości dziedziny, postanowiłam – już w pełni świadomie – kontynuować tę ścieżkę edukacyjną, podejmując studia rachunkowe na Politechnice Rzeszowskiej. A ponieważ zawsze fascynowała mnie dynamika zmian zachodzących w świecie biznesu i ekonomii, równolegle stale poszerzałam swoje umiejętności na kursach organizowanych przez Stowarzyszenie Księgowych w Polsce z zakresu rachunkowości oraz kadr i płac. Ta wiedza połączona z praktyką nabytą w Biurze Rachunkowym Ekspert pozwala mi w pełni zrozumieć codzienne problemy polskich przedsiębiorców, funkcjonujących w niełatwych warunkach gospodarczych i zmagających się z wieloma ograniczeniami. Każdego dnia staram się wykorzystywać swoje kwalifikacje, a przy tym nieustannie śledzić światowe trendy, aby móc jak najefektywniej pomagać klientom i przyczyniać się do ich sukcesów w prowadzeniu biznesu. </p>
+							<img class="coffie" src="img/coffie.png" alt="">							
+							<div class="lawyer-social-media">
+							<a href="mailto:angelika.abramczyk@br-ekspert.com">
+								<i class="fa fa-paper-plane-o"></i>
+								angelika.abramczyk@br-ekspert.com	<br>							
+							<!-- top lawyer social media link  -->
+							<a href="tel:48178589045">
+										<i class="pe-7s-call"></i>
+										(+48) 17-858-90-45
+									</a>
+								<!--<img src="img/sign2.png" alt="">-->							
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			
 			<!-- End row -->
 			
