oksana, ale schowane

--- a/index.html
+++ b/index.html
@@ -580,6 +580,39 @@ Dlatego, by zapewnić kompleksową obsługę firm transportowych, oferujemy szer
 					</div>
 				</div>
 			</div>
+			<!--
+			<div class="row">
+				<div class="col-md-4 col-sm-4 padding-right">
+					<!-- top lawyer img -->
+	<!--				<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
+						<img  class="img-responsive" src="img/oksana.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-md-8 col-sm-8">
+					<!-- top lawyer description -->
+	<!--				<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
+						<div class="rex-team-text">
+							<h4>OKSANA PAVLENKO</h4>
+							<h5>KSIĘGOWA, ODDZIAŁ RZESZÓW</h5>
+							<p>Jako absolwentka Wydziału Ekonomii Wyższej Szkoły  Handlowej im.  B. Markowskiego w Kielcach, a także studiów podyplomowych z zakresu rachunkowości i finansów dla zaawansowanych w Krakowskiej Szkole Biznesu Uniwersytetu Ekonomicznego w Krakowie specjalizuję się w obsłudze księgowej spółek z kapitałem polskim oraz zagranicznym, głównie ukraińskim. Od ponad 16 lat zajmuję się kompleksową obsługą księgowości w przedsiębiorstwach handlowych i produkcyjnych na Ukrainie oraz biurze rachunkowym w Polsce. Posiadam rozległą wiedzę oraz praktyczne doświadczenie w sporządzaniu sprawozdań i raportów finansowych na potrzeby różnych instytucji państwowych i prywatnych, opracowywaniu deklaracji podatkowych, nadzorze merytorycznym i organizacyjnym nad działem księgowości oraz prowadzeniu rachunkowości zarządczej. Biegle władam trzema językami – polskim, rosyjskim i ukraińskim, dzięki czemu mogę pomagać klientom bez względu na narodowość czy różnice kulturowe – nie stanowi to bariery, a wręcz przeciwnie – wpływa na rozwijanie kontaktów, poszerzanie rynku gospodarczego i jakże cenną, zwłaszcza dziś, współpracę na polu ekonomicznym, przynoszącą obopólne korzyści.</p>
+							<img class="coffie" src="img/coffie.png" alt="">
+							<!-- top lawyer social media link  -->
+	<!--						<div class="lawyer-social-media">
+							<a href="mailto:oksana.pavlenko@br-ekspert.com">
+								<i class="fa fa-paper-plane-o"></i>
+								oksana.pavlenko@br-ekspert.com<br>							
+							<!-- top lawyer social media link  -->
+	<!--						<a href="tel:48178589045">
+										<i class="pe-7s-call"></i>
+										(+48) 17-858-90-45
+									</a>
+								<!--<img src="img/sign2.png" alt="">-->
+	<!--							
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>-->
 			
 			<div class="row">
 				<div class="col-md-4 col-sm-4 padding-right">
