--- a/index.html
+++ b/index.html
@@ -1249,13 +1249,13 @@ interesującymi możliwościami.</p>
 		<!-- End Blog Section -->
 
 		<!--  Our Plan and Pricing section -->
-		<section id="price" class="plan container">
+	<!--	<section id="price" class="plan container">
 			<div class="rex-heading">
 				<h3>CENNIK USŁUG - księgowość uproszczona</h3>
 			</div>
 			<div class="row">
 				<!-- plan list -->
-				<div class="col-md-4 col-sm-12 col rex-effect">
+	<!--			<div class="col-md-4 col-sm-12 col rex-effect">
 	                <div class="rex-table-content">
 		                <i class="fa fa-usd rex-feature-icon"></i>
 	                    <h3 class="rex-table-title">Pakiet Basic</h3>
@@ -1265,7 +1265,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">bez pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	    <!--                </ul>
 						<a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1281,7 +1281,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">1 pracownik</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	        <!--            </ul>
 	                    <a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1297,7 +1297,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">5 pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	        <!--            </ul>
 	                    <a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1310,7 +1310,7 @@ interesującymi możliwościami.</p>
 			</div>
 			<div class="row">
 				<!-- plan list -->
-				<div class="col-md-4 col-sm-12 col rex-effect">
+			<!--	<div class="col-md-4 col-sm-12 col rex-effect">
 	                <div class="rex-table-content">
 		                <i class="fa fa-usd rex-feature-icon"></i>
 	                    <h3 class="rex-table-title">Pakiet Basic+</h3>
@@ -1320,7 +1320,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">bez pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	         <!--           </ul>
 						<a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1336,7 +1336,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">1 pracownik</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	        <!--            </ul>
 	                    <a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1352,7 +1352,7 @@ interesującymi możliwościami.</p>
 	                        <li class="rex-pricing-feature">5 pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
-	                    </ul>
+	         <!--           </ul>
 	                    <a href="#send-form">
 	                    <button class="btn rex-bottom" >Zamawiam</button>
 						</a>
@@ -1532,7 +1532,7 @@ interesującymi możliwościami.</p>
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="js/vendor/jquery.vide.js"></script>
     <script src="js/vendor/jquery.nicescroll.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key="></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDz4Bd4ftI0oH8plIE29CsvUlDN_Wy2ZRU"></script>
     <script src="js/vendor/counter.js"></script>
     <script src="js/main.js"></script>
     <script>
