--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@ interesującymi możliwościami.</p>
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="js/vendor/jquery.vide.js"></script>
     <script src="js/vendor/jquery.nicescroll.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDz4Bd4ftI0oH8plIE29CsvUlDN_Wy2ZRU"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key="></script>
     <script src="js/vendor/counter.js"></script>
     <script src="js/main.js"></script>
     <script>
