--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ interesującymi możliwościami.</p>
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
 							<h4>Aleksandra Przybek</h4>
-							<h5>Asystent Księgowej, ODDZIAŁ RZESZÓW</h5>
+							<h5>Asystent Księgowego, ODDZIAŁ RZESZÓW</h5>
 							<p>Pierwsze kroki w świecie finansów stawiałam jako uczennica technikum Ekonomicznego i to wtedy zdobyłam podstawową wiedzę z zakresu rachunkowości. Na dalsze doskonalenie umiejętności wybrałam Uniwersytet Rzeszowski, gdzie najpierw ukończyłam licencjat na kierunku Ekonomia, by następnie obronić tytuł magistra z kierunku finansów i rachunkowości. Na ostatnim roku studiów rozpoczęłam staż organizowany przez uczelnie z funduszy Unijnych w Biurze Rachunkowym Ekspert. W ten sposób mogłam zacząć wykorzystywać zdobytą wiedzę w praktyce oraz uczyć się nowych zagadnień związanych z pracą księgowej. Obecnie w biurze pracuje jako asystentka do spraw księgowości, daje mi to możliwość poszerzania wiedzy i zdobywania cennego doświadczenia.  Na bieżąco obserwują problemy z jakimi spotykają się przedsiębiorcy i wyciągam wnioski, które przydadzą mi się w dalszej pracy. </p>
 							<img class="coffie" src="img/coffie.png" alt="">							
 							<div class="lawyer-social-media">
