--- a/index.html
+++ b/index.html
@@ -1584,10 +1584,14 @@ interesującymi możliwościami.</p>
 						<p>
 							Copyright &copy; 2021 - All Rights Reserved By Ekspert Sp. z o.o. 
 						</p>
+						<p><center><img src="img/pfr/pfr.jpg" alt="" height="144" /></center>
+		
+			</p>
 					</div>
 				</div>
 			</div>
 		</footer>
+		
         <section class="socket">
             <div class="backtop" style="display: block;">
                 <a href="#top"><i class="fa fa-angle-up"></i></a>
@@ -1606,7 +1610,7 @@ interesującymi możliwościami.</p>
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="js/vendor/jquery.vide.js"></script>
     <script src="js/vendor/jquery.nicescroll.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key="></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key="></script>
     <script src="js/vendor/counter.js"></script>
     <script src="js/main.js"></script>
     <script>
