--- a/index.html
+++ b/index.html
@@ -1581,9 +1581,23 @@ interesującymi możliwościami.</p>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
+						
+						<p>
+						Zgodnie z art. 6 ust. 1 lit. f RODO informujemy, iż Pani/Pana dane osobowe, przekazane nam za pośrednictwem naszej strony internetowej/formularza kontaktowego lub w inny sposób (przekazanie wizytówki, przesłanie poczty elektronicznej, kontakt telefoniczny), są gromadzone, przetwarzane i przechowywane w celu prowadzenia korespondencji z Państwem i w celu, dla którego zostały nam udostępnione.
+
+Dane osobowe mogą być ujawnione pracownikom lub współpracownikom firmy, jak też podmiotom udzielającym wsparcia firmie na zasadzie zleconych usług i zgodnie z zawartymi umowami powierzenia. Informujemy ponadto, że Pani/Pana dane osobowe nie będą przetwarzane w sposób zautomatyzowany i nie będą profilowane.
+
+Posiada Pani/Pan prawo dostępu do treści swoich danych, prawo ich sprostowania, usunięcia, ograniczenia przetwarzania, prawo do przenoszenia danych lub do wniesienia sprzeciwu wobec ich przetwarzania. Osoba, której dane dotyczą, ma prawo wniesienia skargi do PUODO, gdy uzna, iż przetwarzanie jej danych osobowych narusza przepisy RODO.
+
+Podanie danych jest dobrowolne, ale niezbędne do realizacji powyższych celów. Pani/Pana dane będą przetwarzane do czasu ustania celu dla jakiego zostały zgromadzone.
+
+Administrator Danych Osobowych:  EKSPERT  RZESZÓW  Sp. z o.o.  ul.  Przemysłowa  11,  35-105  Rzeszów, 
+
+e-mail: rzeszow@br-ekspert.com 
+						</p><br>
 						<p>
 							Copyright &copy; 2021 - All Rights Reserved By Ekspert Sp. z o.o. 
-						</p>
+							</p>
 						<p><center><img src="img/pfr/pfr.jpg" alt="" height="144" /></center>
 		
 			</p>
