fotki nowych pracownikow: Ewelina

--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ interesującymi możliwościami.</p>
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
 							<h4>Angelika Abramczyk</h4>
-							<h5>KSIĘGOWA, ODDZIAŁ RZESZÓW</h5>
+							<h5>KADROWA, ODDZIAŁ RZESZÓW</h5>
 							<p>Z rachunkowością związana jestem od szkoły średniej- kiedy wybór padł na Technikum Ekonomiczne. Następnie, znając już podstawy tej wymagającej dokładności,  skrupulatności i&nbsp;terminowości dziedziny, postanowiłam – już w pełni świadomie – kontynuować tę ścieżkę edukacyjną, podejmując studia rachunkowe na Politechnice Rzeszowskiej. A&nbsp;ponieważ zawsze fascynowała mnie dynamika zmian zachodzących w&nbsp;świecie biznesu i&nbsp;ekonomii, równolegle stale poszerzałam swoje umiejętności na kursach organizowanych przez Stowarzyszenie Księgowych w&nbsp;Polsce z&nbsp;zakresu rachunkowości oraz kadr i&nbsp;płac. Ta wiedza połączona z&nbsp;praktyką nabytą w&nbsp;Biurze Rachunkowym Ekspert pozwala mi w&nbsp;pełni zrozumieć codzienne problemy polskich przedsiębiorców, funkcjonujących w&nbsp;niełatwych warunkach gospodarczych i&nbsp;zmagających się z&nbsp;wieloma ograniczeniami. Każdego dnia staram się wykorzystywać swoje kwalifikacje, a&nbsp;przy tym nieustannie śledzić światowe trendy, aby móc jak najefektywniej pomagać klientom i&nbsp;przyczyniać się do ich sukcesów w&nbsp;prowadzeniu biznesu. </p>
 							<img class="coffie" src="img/coffie.png" alt="">							
 							<div class="lawyer-social-media">
