--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@ interesującymi możliwościami.</p>
 					<!-- top lawyer description -->
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
-							<h4>Bwata Walus</h4>
+							<h4>Beata Walus</h4>
 							<h5>SPECJALISTA DS. KADR I PŁAC, ODDZIAŁ RZESZÓW</h5>
 							<p>Moja droga zawodowa od 10 lat ściśle związana jest z zawodem specjalisty do spraw kadr i płac. Doświadczenie na tym stanowisku zdobywałam sukcesywnie, pracując w dwóch biurach rachunkowych w Rzeszowie oraz rok w firmie produkcyjnej. Bardzo wiele dały mi również specjalistyczne kursy i szkolenia organizowane przez SKWP w Rzeszowie. Obecnie biegle obsługuję i wykorzystuję w praktyce kilka wiodących na rynku programów kadrowych, między innymi Optima, Symfonia czy Wapro Gang. Chcąc pogłębiać wiedzę i rozszerzać horyzonty, ukończyłam również studia podyplomowe w zakresie bezpieczeństwa i higieny pracy. Jakie moje cechy okazują się pomocne w tym zawodzie? Zdecydowanie upór, dzięki któremu zawsze dążę do założonego celu i nie rezygnuję, gdy pojawiają się trudności, oraz otwartość na nowe wyzwania, czego dowodem może być podróż rowerem śladem granic Polski, którą odbyłam w 2008 roku, pokonując 2500 kilometrów! W moim przekonaniu podkreśla to determinację i pasję, które przekładają się na wszystkie dziedziny mojego życia. Niezmiernie cenię sobie pracę w miłej atmosferze, w sympatycznym towarzystwie, dla którego rozwój jest tak samo ważny jak relacje międzyludzkie. Tak właśnie jest w zespole biura rachunkowego Ekspert, gdzie mogę w pełni realizować się zawodowo i dbać o klientów, z którymi mam okazję pracować.</p>
 							<img class="coffie" src="img/coffie.png" alt="">							
