--- a/index.html
+++ b/index.html
@@ -1064,16 +1064,16 @@ interesującymi możliwościami.</p>
 			</div>
 			
 			<!-- End row -->
-			<div class="row">
+			<!--<div class="row">
 				<div class="col-md-4 col-sm-4 padding-right">
 					<!-- top lawyer img -->
-					<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
+	<!--				<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
 						<img  class="img-responsive" src="img/beata_walus.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-md-8 col-sm-8">
 					<!-- top lawyer description -->
-					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
+	<!--				<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
 							<h4>Beata Walus</h4>
 							<h5>SPECJALISTA DS. KADR I PŁAC, ODDZIAŁ RZESZÓW</h5>
@@ -1084,16 +1084,16 @@ interesującymi możliwościami.</p>
 								<i class="fa fa-paper-plane-o"></i>
 								beata.walus@br-ekspert.com<br>							
 							<!-- top lawyer social media link  -->
-							<a href="tel:48178589045">
+	<!--						<a href="tel:48178589045">
 										<i class="pe-7s-call"></i>
 										(+48) 17-858-90-45
 									</a>
 								<!--<img src="img/sign2.png" alt="">-->							
-							</div>
+	<!--						</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			
 			<!-- End row -->
 			
@@ -1785,7 +1785,7 @@ e-mail: rzeszow@br-ekspert.com
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="js/vendor/jquery.vide.js"></script>
     <script src="js/vendor/jquery.nicescroll.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key="></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDz4Bd4ftI0oH8plIE29CsvUlDN_Wy2ZRU"></script>
     <script src="js/vendor/counter.js"></script>
     <script src="js/main.js"></script>
     <script>
