--- a/index.html
+++ b/index.html
@@ -1785,7 +1785,7 @@ e-mail: rzeszow@br-ekspert.com
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="js/vendor/jquery.vide.js"></script>
     <script src="js/vendor/jquery.nicescroll.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDz4Bd4ftI0oH8plIE29CsvUlDN_Wy2ZRU"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key="></script>
     <script src="js/vendor/counter.js"></script>
     <script src="js/main.js"></script>
     <script>
