--- a/index.html
+++ b/index.html
@@ -968,16 +968,16 @@ interesującymi możliwościami.</p>
 			</div>
 			
 			<!-- End row -->
-			<div class="row">
-				<div class="col-md-4 col-sm-4 padding-right">
+			<!--<div class="row">
+				<div class="col-md-4 col-sm-4 padding-right">  -->
 					<!-- top lawyer img -->
-					<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
+				<!--<div class="rex-top-lawyer wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.8s">
 						<img  class="img-responsive" src="img/patrycja_chrobak.jpg" alt="">
 					</div>
 				</div>
-				<div class="col-md-8 col-sm-8">
+				<div class="col-md-8 col-sm-8"> -->
 					<!-- top lawyer description -->
-					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
+			<!--	<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
 							<h4>Patrycja Chrobak</h4>
 							<h5>Asystent Księgowego, ODDZIAŁ RZESZÓW</h5>
@@ -986,18 +986,18 @@ interesującymi możliwościami.</p>
 							<div class="lawyer-social-media">
 							<a href="mailto:patrycja.chrobak@br-ekspert.com">
 								<i class="fa fa-paper-plane-o"></i>
-								patrycja.chrobak@br-ekspert.com<br>							
+								patrycja.chrobak@br-ekspert.com<br>		  -->					
 							<!-- top lawyer social media link  -->
-							<a href="tel:48178589045">
+						<!--<a href="tel:48178589045">
 										<i class="pe-7s-call"></i>
 										(+48) 17-858-90-45
-									</a>
-								<!--<img src="img/sign2.png" alt="">-->							
-							</div>
+									</a> -->
+								<!--<img src="img/sign2.png" alt="">-->					
+					<!--	</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			
 			<!-- End row -->
 			<div class="row">
